kubernetes/applications/ai/open-webui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-webui

  labels:
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/part-of: everlab
