kubernetes/applications/ai/open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: open-webui

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
