kubernetes/applications/ai/open-webui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: open-webui
  namespace: open-webui
  labels:
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/part-of: everlab

spec:
  parentRefs:
    - name: everlab-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - open-webui.prod.everlab.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: open-webui
          port: 80
